@@ -1,5 +1,5 @@
 
-from .buttons import Button
+from .buttons import Button, ToggleButton
 from .widget import Widget, WidgetImage
 from .text import Text
 from .textbox import Textbox
